test/must_fail/api/must_fail_script_shell.ref
error: script_shell() require exactly 0 arguments but 1 was given
  [must_fail_script_shell.ngjs:0:0] in <anonymous>()
    script_shell(1);
    ^

hint: function 'script_shell()' was called with 1 arguments
hint: argument #0 was 1 (number)

Stack trace (1 frames):
  [must_fail_script_shell.ngjs:0:0] in <anonymous>()
    script_shell(1);
    ^

exit(7)
