test/must_fail/api/must_fail_script_shell.ngjs
#!/usr/bin/env ngspicejs
// Script shell has no args
// linter: ngspicejs-lint
"use strict";

script_shell(1);
